# sonar

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .rustfmt.toml  .secrets.example  Anchor.toml  Cargo.toml  README.md  SECURITY.md  deny.toml  docker-compose.prod.yml  package-lock.json  package.json  tsconfig.json
.cargo/: audit.toml
.demo/historical-avg/: client-keypair.json  coordinator-keypair.json  geyser-plugin.json  observed-keypair.json  sonar-demo.toml  state.json
.demo/historical-avg/ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-100-BSdoaeg9EFVu7exhZpMAveYjJTYieMr2mmsctF5vM4dW.tar.zst  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
.demo/historical-avg/ledger/accounts/run/: 0.4  1.3  2.2  21.1
.demo/historical-avg/ledger/accounts/snapshot/100/: 100.5  88.0
.demo/historical-avg/ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1775223652844324  MANIFEST-000021
.demo/historical-avg/ledger/snapshots/100/: 100  status_cache
.demo/historical-avg/ledger/snapshots/100/accounts_hardlinks/: account_path_0
.github/act/: push-event.json
.github/workflows/: ci.yml  security.yml
config/: default.toml  devnet-smoke.toml  devnet.toml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  lib.rs  metrics.rs  pnl.rs  tracing_init.rs  types.rs
crates/coordinator/: Cargo.toml
crates/coordinator/benches/: coordinator_hot_paths.rs
crates/coordinator/src/: callback.rs  dispatcher.rs  lib.rs  listener.rs
crates/indexer/: Cargo.toml
crates/indexer/migrations/: 202603310001_init_account_history.sql  202604050000_add_account_history_pubkey_slot_desc_index.sql
crates/indexer/src/: db.rs  geyser_plugin.rs  lib.rs  server.rs
crates/prover/: Cargo.toml
crates/prover/benches/: prover_hot_paths.rs
crates/prover/src/: artifacts.rs  callback_fixtures.rs  groth16_wrapper.rs  lib.rs  registry.rs  service.rs  sp1_wrapper.rs
crates/prover/tests/: property.rs  prover_service.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: lib.rs  macro.rs
crates/solana-program-shim/: Cargo.toml
crates/solana-program-shim/src/: lib.rs
docker/: coordinator.Dockerfile  prover.Dockerfile
docker/config/: offchain.prod.toml  offchain.prod.toml.tpl
docker/grafana/dashboards/: sonar-metrics.json
docker/grafana/provisioning/dashboards/: dashboard.yml
docker/prometheus/: prometheus.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  PROD_TARGET.md  ROADMAP.md  SSOT.md  demo-video-plan.md
echo_callback/: Cargo.toml
echo_callback/src/: lib.rs
program/: Cargo.toml
program/src/: lib.rs  verifier_registry.rs
program/src/instructions/: mod.rs  register_verifier.rs  update_verifier.rs
program/tests/: sonar.ts
program/tests/fixtures/: demo_verifier_registry.json  demo_verifying_key.json
programs/fibonacci/: Cargo.toml  README.md
programs/fibonacci/src/: main.rs
programs/historical_avg/: Cargo.toml
programs/historical_avg/elf/: historical-avg-program
programs/historical_avg/src/: lib.rs  main.rs
programs/historical_avg/tests/: property.rs
programs/historical_avg_client/: Cargo.toml
programs/historical_avg_client/src/: lib.rs
scripts/: anchor-test.sh  benchmark-cu.ts  benchmark-load.ts  benchmark-prover-starts.ts  benchmark-throughput.ts  build-program.sh  demo-historical-avg.sh  deploy-devnet.sh  devnet-smoke-bench.sh  install-hooks.sh  local-ci.sh  pre-commit  sync-anchor-idl-aliases.sh  verify-demo.sh
tests/: e2e_historical_avg.rs  integration.rs  property.rs
tests/integration/: e2e_historical_avg.rs
