[workspace]
members = [
    "crates/common",
    "crates/indexer",
    "crates/coordinator",
    "crates/prover",
    "crates/solana-program-shim",
    "crates/sdk",
    "program",
    "echo_callback",
]
resolver = "2"

[package]
name = "sonar"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "sonar-coordinator"
path = "bin/coordinator.rs"

[[bin]]
name = "sonar-indexer"
path = "bin/indexer.rs"

[[bin]]
name = "sonar-prover"
path = "bin/prover.rs"

[dependencies]
anyhow = { workspace = true }
tokio  = { workspace = true }
tracing = { workspace = true }

[workspace.dependencies]
sonar-common = { path = "crates/common" }
# Async runtime
tokio = { version = "1", features = ["full"] }
# Solana
solana-sdk     = "2.3.1"
solana-client  = "2.3.1"
solana-program = "2.3.0"
anchor-lang    = "0.32.1"
# ZK
sp1-sdk        = "6.0.2"
groth16-solana = "0.2.0"
# Database — default-features=false excludes mysql/sqlite drivers (postgres-only)
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "macros"] }
# Redis
redis = { version = "0.24", features = ["tokio-comp"] }
# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"
# Logging & metrics
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus-client  = "0.22"
# Errors
anyhow    = "1"
thiserror = "1"
# Testing
proptest   = "1"
tokio-test = "0.4"
mockall    = "0.13"

[profile.release]
overflow-checks = true
