[workspace]
members = [
    "crates/common",
    "crates/indexer",
    "crates/coordinator",
    "crates/prover",
    "crates/solana-program-shim",
    "crates/sdk",
    "program",
    "echo_callback",
    "programs/historical_avg_client",
]
resolver = "2"

[package]
name = "sonar"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "sonar-coordinator"
path = "bin/coordinator.rs"

[[bin]]
name = "sonar-indexer"
path = "bin/indexer.rs"

[[bin]]
name = "sonar-prover"
path = "bin/prover.rs"

[[bin]]
name = "sonar-export-artifacts"
path = "bin/export_artifacts.rs"

[dependencies]
anyhow             = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json         = { workspace = true }
solana-sdk         = { workspace = true }
sonar-common       = { workspace = true }
sonar-prover       = { workspace = true }
sonar-indexer      = { path = "crates/indexer" }
sonar-coordinator  = { path = "crates/coordinator" }

[workspace.dependencies]
sonar-common       = { path = "crates/common" }
sonar-coordinator  = { path = "crates/coordinator" }
sonar-indexer      = { path = "crates/indexer" }
sonar-prover       = { path = "crates/prover" }
# Async runtime
tokio = { version = "1", features = ["full"] }
# Solana
clone-agave-geyser-plugin-interface = "2.2.12"
solana-sdk     = "2.3.1"
solana-client  = "2.3.1"
solana-program = "2.3.0"
anchor-lang    = "0.32.1"
# ZK
sp1-sdk        = "6.0.2"
groth16-solana = "0.2.0"
# Database — default-features=false excludes mysql/sqlite drivers (postgres-only)
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid"] }
# Redis
redis = { version = "0.24", features = ["tokio-comp"] }
# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# HTTP server
axum = "0.7"
tower-http = { version = "0.6", features = ["trace"] }
# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"
bincode     = "1"
# Base58
bs58 = "0.5"
# Logging & metrics
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus-client  = "0.22"
log = "0.4"
# Errors
anyhow    = "1"
thiserror = "1"
# Testing
proptest   = "1"
tokio-test = "0.4"
mockall    = "0.13"

[profile.release]
overflow-checks = true

[dev-dependencies]
anchor-lang = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
reqwest = { workspace = true }
solana-client = { workspace = true }
solana-program-test = "2.3.13"
sonar-program = { path = "program" }
historical-avg-client = { path = "programs/historical_avg_client" }
tempfile = "3"
testcontainers = "0.27.2"
