[package]
name = "sonar-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "sonar-cli"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
anchor-lang = { workspace = true }
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
bincode = { workspace = true }
clap = { version = "4.5", features = ["derive", "env"] }
indicatif = "0.17"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
solana-client = { workspace = true }
solana-sdk = { workspace = true }
sonar-program = { path = "../../program", features = ["no-entrypoint"] }
sp1-verifier = { version = "6.0.2", features = ["ark", "std"] }

[dev-dependencies]
tempfile = "3"
