[package]
name = "sonar-common"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
serde              = { workspace = true }
serde_json         = { workspace = true }
toml               = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
tokio              = { workspace = true }
prometheus-client  = { workspace = true }
