[package]
name = "sonar-coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
sonar-common  = { path = "../common" }
tokio         = { workspace = true }
redis         = { workspace = true }
anyhow        = { workspace = true }
tracing       = { workspace = true }
serde_json    = { workspace = true }
solana-client = { workspace = true }
solana-sdk    = { workspace = true }
futures-util  = "0.3"
