[package]
name = "sonar-coordinator"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
sonar-common  = { path = "../common" }
tokio         = { workspace = true }
redis         = { workspace = true }
anyhow        = { workspace = true }
tracing       = { workspace = true }
serde_json    = { workspace = true }
solana-client = { workspace = true }
solana-sdk    = { workspace = true }
reqwest       = { workspace = true }
bincode       = { workspace = true }
bs58          = { workspace = true }
futures-util  = "0.3"
