[package]
name = "sonar-coordinator"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
sonar-common  = { path = "../common" }
tokio         = { workspace = true }
redis         = { workspace = true }
anyhow        = { workspace = true }
tracing       = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
solana-client = { workspace = true }
solana-sdk    = { workspace = true }
reqwest       = { workspace = true }
bincode       = { workspace = true }
bs58          = { workspace = true }
futures-util  = "0.3"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
tokio = { workspace = true }
testcontainers = "0.27.2"

[[bench]]
name = "coordinator_hot_paths"
harness = false
