[package]
name = "sonar-indexer"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sonar-common = { workspace = true }
clone-agave-geyser-plugin-interface = { workspace = true }
solana-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
