[package]
name = "sonar-indexer"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sonar-common = { workspace = true }
clone-agave-geyser-plugin-interface = { workspace = true }
solana-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
bs58 = { workspace = true }
tower = "0.5"
