[package]
name = "sonar-prover"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
sp1-sdk = { workspace = true, features = ["blocking"] }
groth16-solana = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sonar-common = { workspace = true }
bincode = "1.3"
sha2 = "0.10"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
proptest = "1"

[features]
mock = []
