[package]
name = "sonar-prover"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
sp1-sdk = { workspace = true, features = ["blocking"] }
groth16-solana = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sonar-common = { workspace = true }
bincode = "1.3"
sha2 = "0.10"
async-trait = "0.1"
hex = "0.4"
num-bigint = "0.4"

[dev-dependencies]
tempfile = "3"
proptest = "1"
testcontainers = "0.27.2"
tracing-subscriber = { workspace = true }
criterion = { version = "0.5.1", features = ["html_reports"] }
sp1-verifier = { version = "6.0.2", features = ["std"] }

[features]
mock = []
groth16-cuda = ["sp1-sdk/groth16-cuda"]

[[bench]]
name = "prover_hot_paths"
harness = false
