[package]
name = "historical-avg-client"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "historical_avg_client"

[features]
default        = []
no-entrypoint  = []
test-sbf       = []
idl-build      = ["anchor-lang/idl-build", "sonar-program/idl-build"]
cpi            = []
custom-heap    = []
custom-panic   = []
anchor-debug   = []
no-idl         = []
no-log-ix-name = []

[dependencies]
anchor-lang = { workspace = true }
solana-program = { package = "sonar-solana-program-shim", path = "../../crates/solana-program-shim" }
sonar-program = { path = "../../program", features = ["cpi", "no-entrypoint"] }